refactor: continue fixing method names